tests/NormalTests/paczka1/small_fuzzy/28610748.err
Error in line 4: R4PwvZo×gqL A626 60,6
Error in line 3: DPiED5Pdk3C S568 62,8
Error in line 10: DPiED5Pdk3C A626 50,0
Error in line 15: qjw2fHn A626 C6,7
